site clearning up

--- a/public/frontend/assets/css/main.css
+++ b/public/frontend/assets/css/main.css
@@ -3611,7 +3611,7 @@ age-container #owl-main .owl-next {
   opacity: 1;
 }
 .filters-container {
-  padding: 15px 20px;
+  /* padding: 15px 20px; */
    background-color: #fff;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,.08);
 	padding-bottom:0px
